namespace Reward.Domain.Entities;

public sealed class RewardSource
{
    public Guid Id { get; set; }
    public string Name { get; set; } = string.Empty;
    public string Description { get; set; } = string.Empty;
}
